--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
   },
   "dependencies": {
     "d3": "^6.5.0",
-    "d3-selection": "^2.0.0"
+    "d3-selection": "^2.0.0",
+    "d3-svg-legend": "^2.25.6"
   },
   "scripts": {
     "start": "webpack-dev-server",
