--- a/package.json
+++ b/package.json
@@ -28,7 +28,9 @@
   },
   "dependencies": {
     "d3": "^6.5.0",
+    "d3-array": "^2.11.0",
     "d3-fetch": "^2.0.0",
+    "d3-scale": "^3.2.3",
     "d3-selection": "^2.0.0",
     "d3-svg-legend": "^2.25.6"
   },
